# Minecraft

./: .gitignore  CMakeLists.txt  README.md  run.sh
docs/: 0.Home.md
res/: blocks.json
res/shaders/: aim.glslf  aim.glslv  line.glslf  line.glslv  main.glslf  main.glslv  text.glslf  text.glslv  ui.glslf  ui.glslv
src/: Engine.cpp  Engine.hpp  constants.hpp  main.cpp  math.hpp  typedefs.hpp
src/GL/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/GL/Buffers/: Buffer.cpp  Buffer.hpp  Vao.cpp  Vao.hpp
src/Graphics/: Image.cpp  Image.hpp  LineBatch.cpp  LineBatch.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  TextBatch.cpp  TextBatch.hpp  Texture.cpp  Texture.hpp  UIBatch.cpp  UIBatch.hpp
src/Gui/: Label.cpp  Label.hpp  UIManager.cpp  UIManager.hpp
src/Gui/Elements/: Button.cpp  Button.hpp  Label.cpp  Label.hpp  TextEntry.cpp  TextEntry.hpp  UIElement.cpp  UIElement.hpp
src/Loaders/: AssetsLoader.cpp  AssetsLoader.hpp
src/Physics/: Hitbox.hpp  Physics.cpp  Physics.hpp
src/Voxels/: Atlas.cpp  Atlas.hpp  Blocks.cpp  Blocks.hpp
src/Window/: Camera.cpp  Camera.hpp  Events.cpp  Events.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp  keys.hpp
src/World/: Chunk.cpp  Chunk.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  Chunks.cpp  Chunks.hpp  ChunksRenderer.cpp  ChunksRenderer.hpp  Generators.cpp  Generators.hpp  Raycasting.cpp  Raycasting.hpp  WorldFiles.cpp  WorldFiles.hpp
src/World/Entity/: Player.cpp  Player.hpp
src/vendors/stb/: stb_image.hpp
